fixed file-info component styles   change scrollbar for chrome not working in others

--- a/src/app/components/file-info/file-info.component.scss
+++ b/src/app/components/file-info/file-info.component.scss
@@ -3,7 +3,13 @@
 //   }
 
     .card-image{
-        width: 100%;
+      // max-height:100%;
+      height: 200px; 
+      max-width:100%;
+      display: block;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
   
   .example-header-image {
@@ -21,6 +27,12 @@
 
   .info-body{
     flex: 1 1 auto;
+  }
+
+  .preview{
+    height: 200px;
+    width: 100%;
+    margin-top: 5px;
   }
 
   .info-card-share{
