--- a/src/app/components/side-nav-bar-left/side-nav-bar-left.component.scss
+++ b/src/app/components/side-nav-bar-left/side-nav-bar-left.component.scss
@@ -1,74 +1,93 @@
 .body-container {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .sidenav {
-    width: 245px;
-    padding: 10px;
-    box-shadow: 0 0px 6px 2px rgb(191, 186, 190);
-    display: flex;
-    flex-direction: column;
-    background-color: whitesmoke;
-  }
-  
-  .right-sidenav {
-    // position: relative;
-    width: 345px;
-    padding: 10px;
-    box-shadow: 0 0px 6px 2px rgb(191, 186, 190);
-    display: flex;
-    flex-direction: column;
-    background-color: whitesmoke;
-  }
+  width: 100%;
+  height: 100%;
+}
 
-  .close-button{
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    z-index: 1;
-  }
-  
-  .sidenav-content {
-    width: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;  
-    background-color: whiteghost;
-  }
-  
-  
-  
-  .spacer {
-    flex: 1 1 auto;
-  }
-  
-  .content{
-    /* margin-top: 68px;*/
-    /* max-height: 780px; */
-    width: 100%;
-    overflow: auto;
-    padding: 5px;
-  }
-  
-  .navItem{
-    border-left: 6px solid whitesmoke;
-  }
-  
-  .active{
-    border-left-color:  #039be5; 
-    background-color: #efefef;
-  }
-  
-  /* .content-header{
-    position: fixed;
-    top: 0px;
-    width: -webkit-fill-available;
-    box-shadow: 0 1px 6px 2px rgb(191, 186, 190);
-  } */
-  
-  // .example-fab.md-mini-fab {
-  //   position: absolute;
-  //   right: 20px;
-  //   bottom: 10px;
-  // }
+.sidenav {
+  width: 245px;
+  padding: 10px;
+  box-shadow: 0 0px 6px 2px rgb(191, 186, 190);
+  display: flex;
+  flex-direction: column;
+  background-color: whitesmoke;
+}
+
+.right-sidenav {
+  // position: relative;
+  width: 345px;
+  padding: 10px;
+  box-shadow: 0 0px 6px 2px rgb(191, 186, 190);
+  display: flex;
+  flex-direction: column;
+  background-color: whitesmoke;
+}
+
+.close-button{
+  position: absolute;
+  right: 15px;
+  top: 22px;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.mat-sidenav-content::-webkit-scrollbar-track
+{
+  margin-top: 5px;
+  margin-bottom:5px; 
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: rgb(243, 243, 243);
+}
+::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: #1565C0;
+}
+
+.sidenav-content {
+  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+  background-color: whiteghost;
+}
+
+
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+.content{
+  /* margin-top: 68px;*/
+  /* max-height: 780px; */
+  width: 100%;
+  overflow: auto;
+  padding: 5px;
+}
+
+.navItem{
+  border-left: 6px solid whitesmoke;
+}
+
+.active{
+  border-left-color:  #039be5; 
+  background-color: #efefef;
+}
+
+/* .content-header{
+  position: fixed;
+  top: 0px;
+  width: -webkit-fill-available;
+  box-shadow: 0 1px 6px 2px rgb(191, 186, 190);
+} */
+
+// .example-fab.md-mini-fab {
+//   position: absolute;
+//   right: 20px;
+//   bottom: 10px;
+// }
